#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddldata
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-04-40
2013-09-24 Andy Salnikov
- add map() method to evr.OuputMap and OutputMapV2

Tag: V00-04-39
2013-09-24 Matt Weaver
- Added L3T.ConfigV1,DataV1 for level 3 trigger/filter data
- output in pdsdata V07-00-04
	
Tag: V00-04-38
2013-09-24 Andy Salnikov
- Bld.BldDataAcqADCV1 needs xtc config which is Acquiris.ConfigV1

Tag: V00-04-37
2013-09-20 Andy Salnikov
- add forgotten Bld.BldDataAcqADCV1 type

Tag: V00-04-36
2013-09-18 Andy Salnikov
- define conversion constructor Timepix::DataV2(Timepix::DataV1), this needs
  psddl V00-08-14, the constructor itself has to be implemented separately
- add methods Camer.FrameV1.depth_bytes()
- add data_size() method to Timepix.DataV* classes

Tag: V00-04-35
2013-09-18 Matt Weaver
- moved pdsdata/xtc/SrcAlias class into alias.ddl.xml (Alias::SrcAlias)

Tag: V00-04-34
2013-09-17 Andy Salnikov
- documentation generation changed in SConsTools, updating SConscript

Tag: V00-04-33
2013-09-13 Matt Weaver
- add auto-constructors for more config types 
- add some special constructors for non-config types
- new alias::ConfigV1 type
- add xtc/SrcAlias class definition (included by alias definition)
- new BldEBeamV4 version
- results installed in pdsdata/psddl V07-00-00	
	
Tag: V00-04-32
2013-08-26 Andy Salnikov
- add auto-constructors for for EPICS types

Tag: V00-04-31
2013-08-26 Andy Salnikov
- add auto-constructors for some complex data types

Tag: V00-04-30
2013-08-14 Andy Salnikov
- add releaseCode() method to evr.EventCodeV5 and evr.EventCodeV6

Tag: V00-04-29
2013-07-16 Andy Salnikov
- imp: add one forgotten constant

Tag: V00-04-28
2013-05-22 Andy Salnikov