@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-04-41
+2013-09-25 Andy Salnikov
+- fix for incorrect offsets of data arrays in epics
+
 Tag: V00-04-40
 2013-09-24 Andy Salnikov
 - add map() method to evr.OuputMap and OutputMapV2
